--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0' // swagger ui
 
@@ -30,8 +31,7 @@ dependencies {
 	implementation 'com.google.cloud:google-cloud-storage'  // GCS 업/다운로드 (PDF 워크플로우)
 
 	// 음성 인식 api 의존성
-	implementation("com.google.cloud:google-cloud-speech:4.+")   // v2 클라이언트
-	implementation("com.google.cloud:google-cloud-storage:2.+")  // 긴 파일용(GCS)
+	implementation 'com.google.cloud:google-cloud-speech:4.69.0'
 
 	implementation 'me.paulschwarz:spring-dotenv:4.0.0' // env 관련 의존성
 
