--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	implementation 'org.springframework.boot:spring-boot-starter-json'
 
+	implementation("org.springframework.boot:spring-boot-starter-actuator") // health care
+
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0' // swagger ui
 
 	// Google Cloud Vision api 의존성
