--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,16 @@
+server:
+  port: ${PORT:8080}   # Render에서 내려주는 PORT 따르기
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health   # health 엔드포인트만 공개
+  endpoint:
+    health:
+      probes:
+        enabled: true
+
 spring:
   datasource:
     url: jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
