--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 
 	implementation("org.springframework.boot:spring-boot-starter-actuator") // health care
 
+
+	implementation("org.springframework.boot:spring-boot-starter-webflux") // WebClient
+
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0' // swagger ui
 
 	// Google Cloud Vision api 의존성
